# collect_lic_info

./: Cargo.toml  README.md
src/: cli.rs  main.rs  types.rs
src/report/: constants.rs  error.rs  formatter.rs  mod.rs
