[package]
name = "depsfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
gomod-rs = "0.1.1"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"
xlsxwriter = "0.6.1"
